syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";

message HunterTalents {
	// Beast Mastery
	int32 improved_aspect_of_the_hawk = 1;
	int32 endurance_training = 2;
	int32 improved_eyes_of_the_beast = 3;
	int32 improved_aspect_of_the_monkey = 4;
	int32 thick_hide = 5;
	int32 improved_revive_pet = 6;
	int32 pathfinding = 7;
	bool bestial_swiftness = 8;
	int32 unleashed_fury = 9;
	int32 improved_mend_pet = 10;
	int32 ferocity = 11;
	int32 spirit_bond = 12;
	bool intimidation = 13;
	int32 bestial_discipline = 14;
	int32 frenzy = 15;
	bool bestial_wrath = 16;

	// Marksmanship
	int32 improved_concussive_shot = 17;
	int32 efficiency = 18;
	int32 improved_hunters_mark = 19;
	int32 lethal_shots = 20;
	bool aimed_shot = 21;
	int32 improved_arcane_shot = 22;
	int32 hawk_eye = 23;
	int32 improved_serpent_sting = 24;
	int32 mortal_shots = 25;
	bool scatter_shot = 26;
	int32 barrage = 27;
	int32 improved_scorpid_sting = 28;
	int32 ranged_weapon_specialization = 29;
	bool trueshot_aura = 30;

	// Survival
	int32 monster_slaying = 31;
	int32 humanoid_slaying = 32;
	int32 deflection = 33;
	int32 entrapment = 34;
	int32 savage_strikes = 35;
	int32 improved_wing_clip = 36;
	int32 clever_traps = 37;
	int32 survivalist = 38;
	bool deterrence = 39;
	int32 trap_mastery = 40;
	int32 surefooted = 41;
	int32 improved_feign_death = 42;
	int32 killer_instinct = 43;
	bool counterattack = 44;
	int32 lightning_reflexes = 45;
	bool wyvern_sting = 46;
}

message HunterPetTalents {
	// Cunning
	int32 cobra_reflexes = 1;
	bool dive = 2;
	int32 great_stamina = 3;
	int32 natural_armor = 4;
	bool boars_speed = 5;
	int32 mobility = 6;
	int32 owls_focus = 7;
	int32 spiked_collar = 8;
	int32 culling_the_herd = 9;
	int32 lionhearted = 10;
	bool carrion_feeder = 11;
	int32 great_resistance = 12;
	int32 cornered = 13;
	int32 feeding_frenzy = 14;
	bool wolverine_bite = 15;
	bool roar_of_recovery = 16;
	bool bullheaded = 17;
	int32 grace_of_the_mantis = 18;
	int32 wild_hunt = 19;
	bool roar_of_sacrifice = 20;

	// Ferocity
	int32 improved_cower = 21;
	int32 bloodthirsty = 22;
	bool heart_of_the_pheonix = 23;
	int32 spiders_bite = 24;
	bool rabid = 25;
	bool lick_your_wounds = 26;
	bool call_of_the_wild = 27;
	int32 shark_attack = 28;

	// Tenacity
	bool charge = 29;
	int32 blood_of_the_rhino = 30;
	int32 pet_barding = 31;
	int32 guard_dog = 32;
	bool thunderstomp = 33;
	bool last_stand = 34;
	bool taunt = 35;
	bool intervene = 36;
	int32 silverback = 37;
}

message Hunter {
	message Rotation {
		enum RotationType {
			UnknownType = 0;
			SingleTarget = 1;
			Aoe = 3;
			Custom = 2;
		}
		RotationType type = 9;

		enum StingType {
			NoSting = 0;
			ScorpidSting = 1;
			SerpentSting = 2;
		}
		StingType sting = 5;

		bool trap_weave = 1;

		// TODO: Safe to delete after 1 month (after 8/26/2023).
		double time_to_trap_weave_ms = 2 [deprecated = true];

		enum SpellOption {
			NoSpell = 0;
			SteadyShot = 1;
			ArcaneShot = 2;
			AimedShot = 3;
			MultiShot = 4;
			SerpentStingSpell = 5;
			ScorpidStingSpell = 6;
			KillShot = 7;
			BlackArrow = 8;
			ChimeraShot = 9;
			ExplosiveShot = 10;
			ExplosiveShotDownrank = 13;
			ExplosiveTrap = 11;
			Volley = 12;
		}
		CustomRotation custom_rotation = 8 [deprecated = true];

		// Switch to Aspect of the Viper when mana goes below this percent.
		double viper_start_mana_percent = 6;
		// Switch back to Aspect of the Hawk when mana goes above this percent.
		double viper_stop_mana_percent = 7;

		// Allow use of Explosive Shot Rank 3 during LNL procs.
		bool allow_explosive_shot_downrank = 10;

		bool multi_dot_serpent_sting = 11;
		double steady_shot_max_delay = 12 [deprecated = true];
	}
	Rotation rotation = 1;
	
	message Options {
		enum Ammo {
			AmmoNone = 0;
			IcebladeArrow = 1;
			SaroniteRazorheads = 2;
			TerrorshaftArrow = 3;
			TimelessArrow = 4;
			MysteriousArrow = 5;
			AdamantiteStinger = 6;
			BlackflightArrow = 7;
		}
		Ammo ammo = 1;

		enum PetType {
			PetNone = 0;
			Bat = 1;
			Bear = 2;
			BirdOfPrey = 3;
			Boar = 4;
			CarrionBird = 5;
			Cat = 6;
			Chimaera = 7;
			CoreHound = 8;
			Crab = 9;
			Crocolisk = 10;
			Devilsaur = 11;
			Dragonhawk = 12;
			Gorilla = 13;
			Hyena = 14;
			Moth = 15;
			NetherRay = 16;
			Raptor = 17;
			Ravager = 18;
			Rhino = 19;
			Scorpid = 20;
			Serpent = 21;
			Silithid = 22;
			Spider = 23;
			SpiritBeast = 24;
			SporeBat = 25;
			Tallstrider = 26;
			Turtle = 27;
			WarpStalker = 28;
			Wasp = 29;
			WindSerpent = 30;
			Wolf = 31;
			Worm = 32;
		}

		PetType pet_type = 2;
		HunterPetTalents pet_talents = 3;
		double pet_uptime = 4;

		double sniper_training_uptime = 7;
		double time_to_trap_weave_ms = 8;

		bool use_hunters_mark = 5;
	}
	Options options = 3;
}
